[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Fonts/Button_font_92.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/Fonts/Title_font_256.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/UI/buttonHover.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/button.png" type="Texture" id=4]
[ext_resource path="res://src/LevelSelect/LevelSelect.gd" type="Script" id=5]
[ext_resource path="res://src/LevelSelect/LevelButton.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "LevelSelect"
length = 2.9
tracks/0/type = "value"
tracks/0/path = NodePath("Control/CanvasLayer/Title:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.1, 0.75 ),
"update": 0,
"values": [ Vector2( 964, -500 ), Vector2( 964, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_19:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 0, -1000 ), Vector2( 0, -1000 ), Vector2( 0, 888 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_20:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 306, -1000 ), Vector2( 306, -1000 ), Vector2( 306, 888 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_21:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 612, -1000 ), Vector2( 612, -1000 ), Vector2( 612, 888 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_24:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.7, 1.1 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 1530, -1000 ), Vector2( 1530, -1000 ), Vector2( 1530, 888 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_23:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 1224, -1000 ), Vector2( 1224, -1000 ), Vector2( 1224, 888 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_22:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 918, -1000 ), Vector2( 918, -1000 ), Vector2( 918, 888 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_13:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 0, -1000 ), Vector2( 0, -1000 ), Vector2( 0, 592 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_14:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.9, 1.3 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 306, -1000 ), Vector2( 306, -1000 ), Vector2( 306, 592 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_15:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1, 1.4 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 612, -1000 ), Vector2( 612, -1000 ), Vector2( 612, 592 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_16:rect_position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.1, 1.5 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 918, -1000 ), Vector2( 918, -1000 ), Vector2( 918, 592 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_17:rect_position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 1224, -1000 ), Vector2( 1224, -1000 ), Vector2( 1224, 592 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_18:rect_position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 1.3, 1.7 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 1530, -1000 ), Vector2( 1530, -1000 ), Vector2( 1530, 592 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_7:rect_position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 1.4, 1.8 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 0, -1000 ), Vector2( 0, -1000 ), Vector2( 0, 296 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_8:rect_position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 1.5, 1.9 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 306, -1000 ), Vector2( 306, -1000 ), Vector2( 306, 296 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_9:rect_position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 1.6, 2 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 612, -1000 ), Vector2( 612, -1000 ), Vector2( 612, 296 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_10:rect_position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0, 1.70677, 2.1 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 918, -1000 ), Vector2( 918, -1000 ), Vector2( 918, 296 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_11:rect_position")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0, 1.80677, 2.2 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 1224, -1000 ), Vector2( 1224, -1000 ), Vector2( 1224, 296 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_12:rect_position")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0, 1.90677, 2.3 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 1530, -1000 ), Vector2( 1530, -1000 ), Vector2( 1530, 296 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_1:rect_position")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0, 2.00677, 2.4 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 0, -1000 ), Vector2( 0, -1000 ), Vector2( 0, 0 ) ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_2:rect_position")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( -0.0135368, 2.09323, 2.5 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 306, -1000 ), Vector2( 306, -1000 ), Vector2( 306, 0 ) ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_3:rect_position")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0, 2.17266, 2.6 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 612, -1000 ), Vector2( 612, -1000 ), Vector2( 612, 0 ) ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_4:rect_position")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0, 2.23357, 2.7 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 918, -1000 ), Vector2( 918, -1000 ), Vector2( 918, 0 ) ]
}
tracks/23/type = "value"
tracks/23/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_5:rect_position")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"times": PoolRealArray( 0, 2.30677, 2.8 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 1224, -1000 ), Vector2( 1224, -1000 ), Vector2( 1224, 0 ) ]
}
tracks/24/type = "value"
tracks/24/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_6:rect_position")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/keys = {
"times": PoolRealArray( 0, 2.40677, 2.9 ),
"transitions": PoolRealArray( 1, 0.3, 0.5 ),
"update": 0,
"values": [ Vector2( 1530, -1000 ), Vector2( 1530, -1000 ), Vector2( 1530, 0 ) ]
}
tracks/25/type = "value"
tracks/25/path = NodePath("Control/CanvasLayer/VBoxContainer/Menu_button:rect_position")
tracks/25/interp = 1
tracks/25/loop_wrap = true
tracks/25/imported = false
tracks/25/enabled = true
tracks/25/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 0.1, 0.1, 0.75 ),
"update": 0,
"values": [ Vector2( -2500, 0 ), Vector2( -2500, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/CanvasLayer/Title:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 964, -500 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_19:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -1000 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_20:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 306, -1000 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_21:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 612, -1000 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_24:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1530, -1000 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_23:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1224, -1000 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_22:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 918, 888 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Control/CanvasLayer/LevelContainer/Level_button_13:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -1000 ) ]
}

[node name="LevelSelect" type="Node2D"]
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/LevelSelect = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Control" type="Control" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="Title" type="Label" parent="Control/CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 964.0
margin_top = -500.0
margin_right = 2876.0
margin_bottom = -167.0
custom_fonts/font = ExtResource( 2 )
text = "Select a level:"
align = 1

[node name="LevelContainer" type="GridContainer" parent="Control/CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -893.0
margin_top = -579.5
margin_right = 893.0
margin_bottom = 579.5
custom_constants/vseparation = 25
custom_constants/hseparation = 50
columns = 6

[node name="Level_button_1" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_right = 256.0
margin_bottom = 271.0

[node name="Level_button_2" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 306.0
margin_right = 562.0
margin_bottom = 271.0
level_id = 2

[node name="Level_button_3" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 612.0
margin_right = 868.0
margin_bottom = 271.0
level_id = 3

[node name="Level_button_4" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 918.0
margin_right = 1174.0
margin_bottom = 271.0
level_id = 4

[node name="Level_button_5" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 1224.0
margin_right = 1480.0
margin_bottom = 271.0
level_id = 5

[node name="Level_button_6" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 1530.0
margin_right = 1786.0
margin_bottom = 271.0
level_id = 6

[node name="Level_button_7" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_top = 296.0
margin_right = 256.0
margin_bottom = 567.0
level_id = 7

[node name="Level_button_8" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 306.0
margin_top = 296.0
margin_right = 562.0
margin_bottom = 567.0
level_id = 8

[node name="Level_button_9" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 612.0
margin_top = 296.0
margin_right = 868.0
margin_bottom = 567.0
level_id = 9

[node name="Level_button_10" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 918.0
margin_top = 296.0
margin_right = 1174.0
margin_bottom = 567.0
level_id = 10

[node name="Level_button_11" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 1224.0
margin_top = 296.0
margin_right = 1480.0
margin_bottom = 567.0
level_id = 11

[node name="Level_button_12" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 1530.0
margin_top = 296.0
margin_right = 1786.0
margin_bottom = 567.0
level_id = 12

[node name="Level_button_13" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_top = -1000.0
margin_right = 256.0
margin_bottom = -729.0
level_id = 13

[node name="Level_button_14" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 306.0
margin_top = 592.0
margin_right = 562.0
margin_bottom = 863.0
level_id = 14

[node name="Level_button_15" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 612.0
margin_top = 592.0
margin_right = 868.0
margin_bottom = 863.0
level_id = 15

[node name="Level_button_16" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 918.0
margin_top = 592.0
margin_right = 1174.0
margin_bottom = 863.0
level_id = 16

[node name="Level_button_17" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 1224.0
margin_top = 592.0
margin_right = 1480.0
margin_bottom = 863.0
level_id = 17

[node name="Level_button_18" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 1530.0
margin_top = 592.0
margin_right = 1786.0
margin_bottom = 863.0
level_id = 18

[node name="Level_button_19" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_top = -1000.0
margin_right = 256.0
margin_bottom = -729.0
level_id = 19

[node name="Level_button_20" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 306.0
margin_top = -1000.0
margin_right = 562.0
margin_bottom = -729.0
level_id = 20

[node name="Level_button_21" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 612.0
margin_top = -1000.0
margin_right = 868.0
margin_bottom = -729.0
level_id = 21

[node name="Level_button_22" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 918.0
margin_top = 888.0
margin_right = 1174.0
margin_bottom = 1159.0
level_id = 22

[node name="Level_button_23" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 1224.0
margin_top = -1000.0
margin_right = 1480.0
margin_bottom = -729.0
level_id = 23

[node name="Level_button_24" parent="Control/CanvasLayer/LevelContainer" instance=ExtResource( 6 )]
margin_left = 1530.0
margin_top = -1000.0
margin_right = 1786.0
margin_bottom = -729.0
level_id = 24

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -275.0
margin_top = -260.0
margin_right = 275.0
margin_bottom = -85.0
custom_constants/separation = 75

[node name="Menu_button" type="TextureButton" parent="Control/CanvasLayer/VBoxContainer"]
margin_right = 550.0
margin_bottom = 175.0
rect_min_size = Vector2( 550, 130 )
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="Control/CanvasLayer/VBoxContainer/Menu_button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.5
margin_top = -60.5
margin_right = 120.5
margin_bottom = 60.5
custom_fonts/font = ExtResource( 1 )
text = "menu"

[connection signal="pressed" from="Control/CanvasLayer/VBoxContainer/Menu_button" to="." method="_on_Menu_button_pressed"]
